# silly-media

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yml  llm.html  pyproject.toml  restart.sh  test-generate.sh  test-pixelart.sh  ui-3d.html  ui-audio.html  ui-img2img.html  ui-music.html  ui-video.html  ui.html  ui.sh
.claude/: settings.json
data/db/: silly_media.db
docs/: api.md  setup.md  test-prompts.md
mcp-server/: server.py
src/silly_media/: __init__.py  config.py  db.py  main.py  progress.py  schemas.py  vram_manager.py
src/silly_media/audio/: __init__.py  base.py  demucs_model.py  maya.py  schemas.py  xtts.py  youtube.py
src/silly_media/comfyui/: __init__.py  node_info.py  workflow_parser.py
src/silly_media/img2img/: __init__.py  base.py  qwen_edit.py  schemas.py
src/silly_media/llm/: __init__.py  base.py  huihui_qwen.py  schemas.py
src/silly_media/model3d/: __init__.py  base.py  hunyuan3d.py  schemas.py
src/silly_media/models/: __init__.py  base.py  krea2.py  ovis_image.py  qwen_image.py  z_image.py
src/silly_media/music/: __init__.py  ace_step.py  base.py  schemas.py
src/silly_media/routers/: __init__.py  actors.py  comfyui.py  img2img.py  llm.py  model3d.py  music.py  pixelart.py  sprite.py  tts.py  video.py  vision.py
src/silly_media/utils/: __init__.py  image_processing.py
src/silly_media/video/: __init__.py  base.py  hunyuan.py  schemas.py
src/silly_media/vision/: __init__.py  base.py  qwen3_vl.py  schemas.py
