[project]
name = "silly-media"
version = "0.1.0"
description = "Multi-model text-to-image API service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "torch>=2.0.0",
    "transformers>=4.51.0,<5.0.0",  # ACE-Step 1.5 incompatible with transformers 5.x (meta tensors)
    "accelerate>=1.0.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    # TTS dependencies
    "coqui-tts>=0.22.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",  # Required for vision models
    "torchcodec>=0.1.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    # YouTube voice extraction
    "yt-dlp>=2024.0.0",
    "demucs>=4.0.0",
    # Maya TTS
    "snac",
    "scipy>=1.10.0",
    # Video generation
    "opencv-python>=4.8.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.8",
    "peft>=0.13.0",  # Required for LoRA loading in diffusers
    "bitsandbytes>=0.41.0",  # Required for 4-bit quantized models (img2img)
    "rembg[cpu]>=2.0.50",  # AI background removal for pixel art (CPU to avoid VRAM conflicts)
    "gguf>=0.6.0",  # Required for GGUF quantized models (qwen-image-2512)
    # Music generation (ACE-Step 1.5 installed in Dockerfile with --no-deps;
    # its runtime deps listed here)
    "soundfile>=0.12.0",
    "loguru>=0.7.0",
    "pypinyin>=0.50.0",
    "py3langid>=0.3.0",
    "hangul-romanize>=0.1.0",
    "spacy>=3.7.0",
    "cutlet",
    "fugashi[unidic-lite]",
    "datasets>=3.0.0",
    "num2words>=0.5.0",
    "vector-quantize-pytorch>=1.27.15",
    "einops>=0.8.1",
    "numba>=0.63.1",
    "toml",
    "diskcache",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silly_media"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
